
v0.2.0 2018-??-??
  IMPROVEMENTS
  * Faster optimisation via paralelisation (OMP). The animal example is about 4-6x
    faster with 8 cores.

  * Faster data input/preparation. The animal example is ~3x faster. Larger cases will
    see more gain.

v0.1.1 2018-07-03
  IMPROVEMENTS
  * Improved handling of specifications LimitContributions and EqualizeContributions
    when gender is given, i.e., when limits are used for one gender and equalizing
    for the other gender.

  * Consolidated which optimisation modes are turned on with provided targets
    (criterion, coancestry, and/or inbreeding).

  BUGFIXES
  * Handle cases when the number of matings/crosses is larger than the number of
    individuals.

v0.1.0 2018-01-21
  * First public version