@@ -7,6 +7,10 @@ v0.2.0 2018-??-??
   * Faster data input/preparation. The animal example is ~3x faster. Larger cases will
     see more gain.
 
+  BUGFIXES
+  * Now we actually do set random number generator seed value. However, it does
+    not give reproducible results with paralelisation.
+
 v0.1.1 2018-07-03
   IMPROVEMENTS
   * Improved handling of specifications LimitContributions and EqualizeContributions
